; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_decommit_default.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_decommit_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i64, i64, i32)* @extent_decommit_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extent_decommit_default(i32* %0, i8* %1, i64 %2, i64 %3, i64 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = ptrtoint i8* %13 to i64
  %15 = load i64, i64* %10, align 8
  %16 = add i64 %14, %15
  %17 = inttoptr i64 %16 to i8*
  %18 = load i64, i64* %11, align 8
  %19 = call i32 @pages_decommit(i8* %17, i64 %18)
  ret i32 %19
}

declare dso_local i32 @pages_decommit(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
